feat: implement author book collaboration, tax calculation, and enhanced moderation systems with multi-language support and comprehensive testing